fixing spacing on projects section

--- a/main.css
+++ b/main.css
@@ -74,15 +74,6 @@ hr {
   width: 300px;
 }
 
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-}
 
 .hovereffect .overlay {
   width: 100%;
@@ -126,7 +117,7 @@ hr {
   transform: translateY(5px);
 }
 
-.hovereffect a.info {
+.hovereffect p.info {
   display: inline-block;
   text-decoration: none;
   padding: 7px 14px;
@@ -142,10 +133,10 @@ hr {
   transition: all 0.4s ease-in-out;
   font-weight: normal;
   margin: -52px 0 0 0;
-  padding: 62px 100px;
+  padding: 62px 62px;
 }
 
-.hovereffect:hover a.info {
+.hovereffect:hover p.info {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transform: scale(1);
